# Tinksoul

./: .gitignore  .todo  angular.json  index.html  package-lock.json  package.json  readme.md  todo.md  tsconfig.json
LICENSES/: LICENSE-markdown-rs.md  LICENSE.md  readme.md
src/: index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: brainparser.rs  main.rs
src/app/: app.component.html  app.component.ts
