[package]
name = "tinksoul"
version = "0.0.1"
description = "A markdown second-brain builder"
authors = ["Yeray Romero"]
license = "MIT"
repository = "www.github.com/Sellsword9/tinksoul"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
markdown = "1.0.0-alpha.14"

[dev-dependencies]
tinksoul = { path = "." }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
